--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 
 lang: ru-RU
 encoding: utf-8
-url: http://progmsk.github.io
+url: https://specznaniya.github.io
 permalink: pretty
 highlighter: rouge
 markdown: kramdown
